<resources>
    <string name="app_name">Hangman</string>
    <string name="rules">Se regler</string>
    <string name="start">Nytt spill</string>
    <string name="lang">English</string>
    <string name="stats">Statistikk</string>
    <string name="newGame">Nytt spill</string>
    <string name="exit">Avslutt</string>
    <string name="winnerMsg">Du vant!</string>
    <string name="loserMsg">Du tapte!</string>
    <string name="theWord">Det riktige ordet var</string>
    <string name="message">Vil du spille igjen?</string>
    <string name="victories">Seier(e)</string>
    <string name="losses">Tap</string>
    <string name="statsTittel">Statistikk for denne økten</string>
    <string name="stop">Avslutt</string>
    <string name="back">Tilbake</string>
    <string name="help">Hjelp</string>
    <string name="gameOver">Game Over</string>

    <string name="rulesHeader">Regler</string>
    <string name="rules1">Hangman er en gjettelek der du skal gjette et ord</string>
    <string name="rules2">Ordet du skal gjette er like langt som antall streker på skjermen</string>
    <string name="rules3">Du gjetter en og en bokstav</string>
    <string name="rules4">Hvis du velger riktig bokstav blir bokstaven synlig alle steder den forekommer i ordet</string>
    <string name="rules5">Hvis du velger feil bokstav kommer det en kroppsdel til på mannen</string>
    <string name="rules6">Du taper hvis du velger feil bokstav 7 ganger</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="å">Å</string>
    <string name="ø">Ø</string>
    <string name="æ">Æ</string>
    <string name="q">Q</string>
    <string name="x">X</string>
</resources>
