<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kasia.hangman.Game"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/galge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        app:srcCompat="@drawable/d001" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/ord"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:id="@+id/melding"
        android:textColor="@color/red"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="11">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/q"
            android:text="@string/q"
            android:onClick="valgtBokstav" />

        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/w"
        android:text="@string/w"
        android:onClick="valgtBokstav" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/e"
            android:text="@string/e"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/r"
            android:text="@string/r"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/t"
            android:text="@string/t"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/y"
            android:text="@string/y"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/u"
            android:text="@string/u"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/i"
            android:text="@string/i"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/o"
            android:text="@string/o"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/p"
            android:text="@string/p"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/å"
            android:text="@string/å"
            android:onClick="valgtBokstav"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="11">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/a"
            android:text="@string/a"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/s"
            android:text="@string/s"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/d"
            android:text="@string/d"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/f"
            android:text="@string/f"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/g"
            android:text="@string/g"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/h"
            android:text="@string/h"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/j"
            android:text="@string/j"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/k"
            android:text="@string/k"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/l"
            android:text="@string/l"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/ø"
            android:text="@string/ø"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/æ"
            android:text="@string/æ"
            android:onClick="valgtBokstav"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="11">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/z"
            android:text="@string/z"
            android:onClick="valgtBokstav"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/x"
            android:text="@string/x"
            android:onClick="valgtBokstav" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/c"
            android:text="@string/c"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/v"
            android:text="@string/v"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/b"
            android:text="@string/b"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/n"
            android:text="@string/n"
            android:onClick="valgtBokstav"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/m"
            android:text="@string/m"
            android:onClick="valgtBokstav"/>

    </LinearLayout>

</LinearLayout>
