<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.kasia.hangman.WelcomeScreen"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/lang_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:onClick="langOnClick"
        android:text="@string/lang" />

    <Button
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:onClick="rulesOnClick"
        android:layout_marginTop="10dp"
        android:text="@string/rules" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="startOnClick"
        android:text="@string/start" />

    <Button
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="statsOnClick"
        android:text="@string/stats" />

</LinearLayout>