<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1"
    android:weightSum="12">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statsTittel"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/green10"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="30dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/green2"
        android:layout_weight="2">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/victories"
            style="@style/statsStyle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/victories"
            style="@style/statsStyle" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/green3"
        android:layout_weight="2">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/losses"
            style="@style/statsStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/losses"
            style="@style/statsStyle"/>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:onClick="stop"
        android:text="@string/back"
        android:background="@drawable/button"
        android:layout_weight="1"/>



</LinearLayout>